# reflex_tutorial

./: .gitignore  README.md  pyproject.toml  rxconfig.py
reflex_tutorial/: __init__.py  calendario.py  clock_page.py  code_example.py  counter.py  data.py  editor_file.py  github_stats.py  landing.py  linktree.py  listbox.py  login.py  login2.py  maps.py  notify.py  portfolio.py  radiobutton.py  ramp.py  reflex_tutorial.py  reflexollama.py  restapi_client.py  static_tutorial.py  tutorial3.py  upload_file.py  user_page.py  view_pdf.py  weather_app.py
reflex_tutorial/components/: entry.py  gmaps_component.py  input.py  pdfview_component.py  status.py  title.py
reflex_tutorial/components/OllamaChatReflex/: __init__.py  chat.py  modal.py  navbar.py
reflex_tutorial/model/: user_model.py
reflex_tutorial/repository/: connect_db.py  user_repository.py
reflex_tutorial/service/: user_service.py
reflex_tutorial/states/: OllamaState.py  StatusState.py
