[tool.poetry]
name = "reflex-tutorial"
version = "0.1.0"
description = ""
authors = ["Ernesto Crespo <ecrespo@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
reflex = "^0.5.1"
pytz = "^2024.1"
reflex-calendar = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
